# smart-code-planner

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  launch.py  pyproject.toml  run.sh  setup.sh  test_imports.py  test_integration.py  validate.sh
docker/: Dockerfile
docs/: HOW_TO_RUN.md  PROJECT_SUMMARY.md
examples/: sample_analysis.md
prompts/: code_organization.txt  subtask_analysis.txt  task_decomposition.txt  task_validation.txt
src/: __init__.py
src/agent/: __init__.py  graph.py  nodes.py  state.py
src/core/: __init__.py  config.py  models.py
src/services/: __init__.py  code_advisor.py  llm_service.py  task_analyzer.py
src/ui/: __init__.py  streamlit_app.py
tests/: __init__.py  conftest.py  test_agent.py  test_models.py  test_task_analyzer.py
